--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="https://firebasestorage.googleapis.com/v0/b/elixir-fbae4.appspot.com/o/favicon.ico?alt=media&token=e5d076c2-c0f1-4b0e-909a-1ae45c169bd7" type="image/x-icon">
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -13,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap" rel="stylesheet">
     <!-- chat cdns -->
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <title>elixir</title>
+    <title>Elixir an E-Pharmacy Store</title>
   </head>
   <body>
     <div id="root">
